subprojects/swen430/src/test/resources/tests/valid/Print_Valid_2.while
void main() {
    print 1.5;
}
