subprojects/swen430/src/test/resources/tests/invalid/Deadcode_Invalid_4.while
void foo() {
    int x = 0;
    for (int i = 0; i < 5; i = i + 1) {
        if (x == 1) {
            return 5;
        } else {
            break;
        }

        x = x + 1;
    }

    return x;
}
